Fixed bg image jumping when hidden div shows. Fixed show/hidden js only targeting the first element(select by id to select by class).

--- a/src/main/resources/static/css/spring-core.css
+++ b/src/main/resources/static/css/spring-core.css
@@ -80,6 +80,7 @@ h6 {
 }
 .second-row img, h3, input, form{
     display: inline;
+    padding-left: 10px;
 }
 .fifth-row p {
     text-align: justify;
@@ -108,5 +109,8 @@ ul.unstyle {
 }
 .header-bg-color {
     background-color: #d5d9e1;
+}
+.red-color {
+    color: red;
 }
 
